# youtube_data_api

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: app.py  videos_stats.pkl
data/: videos_stats.pkl
src/: etl.py
